removed test fetch button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>Fetch</button>
-    <div class="wrapper">
+    <div id="wrapper">
         <header>
             <h1><a href="/">KeepFlix</a></h1>
             <h2>Your Personal Movie Library</h2>
