--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,19 +12,22 @@
             <h1><a href="/">KeepFlix</a></h1>
             <h2>Your Personal Movie Library</h2>
         </header>
-        <div class="sidebar">
-            <h4>Shortcuts</h4>
-            <ul>
-                <li><a href="/users/1">Profile</a></li>
-                <li><a href="/movies">My Movies</a></li>
-                <li><a href="/logout">Log Out</a></li>
-            </ul>
+        <div id="top">
+            <div class="sidebar">
+                <h4>Shortcuts</h4>
+                <ul>
+                    <li><a href="/users/1">Profile</a></li>
+                    <li><a href="/movies">My Movies</a></li>
+                    <li><a href="/logout">Log Out</a></li>
+                </ul>
+            </div>
+            <div class="user">
+                <img alt="Profile Pic" src="https://www.gstatic.com/tv/thumb/persons/235135/235135_v9_ba.jpg" width="100" height="100">
+                <h4>Welcome, Dwayne!</h4>
+                <p>dwayne@me.com</p>
+            </div>  
         </div>
-        <div class="user">
-            <img alt="Profile Pic" src="https://www.gstatic.com/tv/thumb/persons/235135/235135_v9_ba.jpg" width="100" height="100">
-            <h4>Welcome, Dwayne!</h4>
-            <p>dwayne@me.com</p>
-        </div>     
+   
         <div id="feed">
             <div class="movie-post">
                 <h1><a href="/movies/1">Avengers: Endgame&nbsp;</a></h1>
@@ -38,7 +41,7 @@
                 </form>  
                 <h3><strong>Rated </strong> PG-13</h3> 
                 <h3><strong>Action Adventure Drama</strong></h3>
-                <form action="/movies/1/comments" accept-charset="UTF-8" method="post">
+                <form action="/movies/1/comments" accept-charset="UTF-8" method="post" >
                   <input type="hidden" name="authenticity_token" value="aKcJi+X0vkoDQOBjQCKsieH30zPxD60tlHJdNcJOa0gOrF29W1WUDoBu1M0RrRrRltVr8wi4+LLwIaHaj8jY6Q==">
                   <input placeholder="Add Comment" type="text" name="comment[content]" id="comment_content">
                   <input type="submit" name="commit" value="Create Comment" style="display: none" data-disable-with="Create Comment"> 
@@ -237,11 +240,20 @@
                 <input type="submit" name="commit" value="Create Comment" style="display: none" data-disable-with="Create Comment"> 
               </form>
             </div>
-        </div>        
-   <script src="index.js"></script>
-  <footer class="branding">
-      <small>© 2020 <strong>KeepFlix</strong></small>
-    </footer>
+        </div>  
+        <footer class="branding">
+            <small>© 2020 <strong>KeepFlix</strong></small>
+        </footer> 
   </div>
+  <script src="index.js"></script>
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <form action="" accept-charset="UTF-8" method="post" id="comment_form">
+        <input type="hidden" name="authenticity_token" value="aKcJi+X0vkoDQOBjQCKsieH30zPxD60tlHJdNcJOa0gOrF29W1WUDoBu1M0RrRrRltVr8wi4+LLwIaHaj8jY6Q==">
+        <input placeholder="Add Comment" type="text" name="comment[content]" id="comment_content">
+        <input type="submit" name="commit" value="Create Comment" style="display: none" data-disable-with="Create Comment"> 
+    </form>
+  </div>
+  
 </body>
 </html>
