--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         </div>
    
         <div id="feed">
-            <!-- <div class="movie-post">
+            <div class="movie-post">
                 <h1><a href="/movies/1">Avengers: Endgame&nbsp;</a></h1>
                 <h4><a href="/movies/1">
                     <img src="https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_UX182_CR0,0,182,268_AL_.jpg"></a>
@@ -111,7 +111,7 @@
                 <input placeholder="Add Comment" type="text" name="comment[content]" id="comment_content">
                 <input type="submit" name="commit" value="Create Comment" style="display: none" data-disable-with="Create Comment"> 
               </form>
-            </div> -->
+            </div>
   <script src="index.js"></script>
   
 </body>
